--- a/config/all_light.jsonc
+++ b/config/all_light.jsonc
@@ -42,7 +42,7 @@
                 "albedo_metal" : "assets/textures/albedo_metal.jpg",
                 "albedo_wood" : "assets/textures/albedo_wood.jpg",
                 "ambient_occlusion_monkey" : "assets/textures/ambient_occlusion_monkey.jpg",
-                "emmissive_asphalt" : "assets/textures/emissive_asphalt.jpg",
+                "emissive_asphalt" : "assets/textures/emissive_asphalt.jpg",
                 "roughness_asphalt" : "assets/textures/roughness_asphalt.jpg",
                 "roughness_metal" : "assets/textures/roughness_metal.jpg",
                 "roughness_wood" : "assets/textures/roughness_wood.jpg",
@@ -152,13 +152,9 @@
                         }
                     },
                     "tint": [1, 1, 1, 1],
-                    "texture": "monkey",
+                    "texture": "emissive_asphalt",
                     "sampler": "default",
-                    "isLit" : true,
-                    "albedo" : "albedo_metal",
-                    "specular" : "specular_metal",
-                    "roughness" : "roughness_metal",
-                    "ambientOcclusion" : "ambient_occlusion_monkey"
+                    "isLit" : true
                 },
                 "moon":{
                     "type": "textured",
@@ -804,14 +800,14 @@
                 {
                     "type": "Light",
                     "color": [0, 0, 1],
-                    "attenuation": [0.1, 0.1, 0.0],
+                    "attenuation": [0.01, 0.1, 0.0],
                     "cone_angles": [30, 180],
                     "lightType": "spot"
                 }
                 ]
             },
             {
-                "position": [ 2, -0.5, 0],
+                "position": [ 2, 10.0, 0],
                 "rotation": [ 0, 0, 0 ],
                 "scale": [ 0.5, 0.5, 0.5 ],
                 "components": [
@@ -822,7 +818,7 @@
                 },
                 {
                     "type": "Light",
-                    "color": [1, 0.0, 0.0],
+                    "color": [0.44, 0.34, 0.22],
                     "attenuation": [0.1, 0.1, 0.0],
                     "cone_angles": [30, 180],
                     "lightType": "directional"
@@ -830,7 +826,7 @@
                 ]
             },
             {
-                "position": [ 2, -0.5, -3],
+                "position": [ 1, 0.0, -3],
                 "rotation": [-45, 0, 0],
                 "components": [
                     {
